[package]
name = "bibtexter"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"] }
scraper = "0.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5.2"
regex = "1.10.5"
lazy_static = "1.5.0"
html-escape = "0.2.13"
chrono = "0.4.41"
